Fix generation of layout beginning