@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2024, 2025, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2024, 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -63,6 +63,17 @@
  * @enablePreview
  * @compile FieldLayoutAnalyzer.java ValueFieldInheritanceTest.java
  * @run main runtime.valhalla.inlinetypes.field_layout.ValueFieldInheritanceTest 3
+ */
+
+/*
+ * @test id=64bitsCompactObjectHeader
+ * @requires vm.bits == 64
+ * @library /test/lib
+ * @requires vm.flagless
+ * @modules java.base/jdk.internal.vm.annotation
+ * @enablePreview
+ * @compile FieldLayoutAnalyzer.java ValueFieldInheritanceTest.java
+ * @run main runtime.valhalla.inlinetypes.field_layout.ValueFieldInheritanceTest 4
  */
 
 package runtime.valhalla.inlinetypes.field_layout;
@@ -171,7 +182,10 @@ public class ValueFieldInheritanceTest {
     }
   }
 
-  static ProcessBuilder exec(String compressedOopsArg, String compressedKlassPointersArg, String... args) throws Exception {
+  static ProcessBuilder exec(String compressedOopsArg,
+                             String compressedKlassPointersArg,
+                             String compactObjectHeader,
+                             String... args) throws Exception {
     List<String> argsList = new ArrayList<>();
     Collections.addAll(argsList, "--enable-preview");
     Collections.addAll(argsList, "-XX:+UnlockDiagnosticVMOptions");
@@ -183,6 +197,9 @@ public class ValueFieldInheritanceTest {
     if (compressedKlassPointersArg != null) {
       Collections.addAll(argsList, compressedKlassPointersArg);
     }
+    if (compactObjectHeader != null) {
+      Collections.addAll(argsList, compactObjectHeader);
+    }
     Collections.addAll(argsList, "-Xmx256m");
     Collections.addAll(argsList, "-cp", System.getProperty("java.class.path") + System.getProperty("path.separator") + ".");
     Collections.addAll(argsList, args);
@@ -192,28 +209,39 @@ public class ValueFieldInheritanceTest {
   public static void main(String[] args) throws Exception {
     String compressedOopsArg;
     String compressedKlassPointersArg;
+    String compactObjectHeader;
 
     switch(args[0]) {
       case "0": compressedOopsArg = null;
                 compressedKlassPointersArg = null;
+                compactObjectHeader = null;
                 break;
       case "1": compressedOopsArg = "-XX:+UseCompressedOops";
                 compressedKlassPointersArg =  "-XX:+UseCompressedClassPointers";
+                compactObjectHeader = "-XX:-UseCompactObjectHeaders";
                 break;
       case "2": compressedOopsArg = "-XX:-UseCompressedOops";
                 compressedKlassPointersArg = "-XX:+UseCompressedClassPointers";
+                compactObjectHeader = "-XX:-UseCompactObjectHeaders";
                 break;
       case "3": compressedOopsArg = "-XX:-UseCompressedOops";
                 compressedKlassPointersArg = "-XX:-UseCompressedClassPointers";
+                compactObjectHeader = "-XX:-UseCompactObjectHeaders";
+                break;
+      case "4": compressedOopsArg = "-XX:+UseCompressedOops";
+                compressedKlassPointersArg = "-XX:+UseCompressedClassPointers";
+                compactObjectHeader = "-XX:+UseCompactObjectHeaders";
+                break;
+      case "5": compressedOopsArg = "-XX:-UseCompressedOops";
+                compressedKlassPointersArg = "-XX:-UseCompressedClassPointers";
+                compactObjectHeader = "-XX:+UseCompactObjectHeaders";
                 break;
       default: throw new RuntimeException("Unrecognized configuration");
     }
 
-    // Generate test classes
-    // NullMarkersTest fat = new NullMarkersTest();
-
     // Execute the test runner in charge of loading all test classes
-    ProcessBuilder pb = exec(compressedOopsArg, compressedKlassPointersArg, "runtime.valhalla.inlinetypes.field_layout.ValueFieldInheritanceTest$TestRunner");
+    ProcessBuilder pb = exec(compressedOopsArg, compressedKlassPointersArg, compactObjectHeader,
+                             "runtime.valhalla.inlinetypes.field_layout.ValueFieldInheritanceTest$TestRunner");
     OutputAnalyzer out = new OutputAnalyzer(pb.start());
 
     if (out.getExitValue() != 0) {
